--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 </head>
 
 <body>
+  <main>
   <div class="ui-container">
     <div class="qr-codeWrapper">
       <img src="images/image-qr-code.png" alt="QR-CODE">
@@ -31,6 +32,7 @@
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="#">Carito</a>.
   </div>
+    </main>
 </body>
 
 </html>
